[tool.poetry]
name = "rag-env"
version = "0.1.0"
description = ""
authors = ["mr-andor <geriath@live.com>"]

[tool.poetry.dependencies]
python = "^3.9"
langchain = "^0.0.293"
openai = "^0.28.0"
weaviate-client = "^3.24.1"
jupyter = "^1.0.0"
pypdf = "^3.16.1"
tiktoken = "^0.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
